[project]
name = "dev-toolkit"
version = "0.1.0"
description = "Development utilities and testbeds"
authors = [
    {name = "Kevin Lin"}
]
requires-python = ">=3.8"
readme = "README.md"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src"

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "B", "I", "UP"] 